style/main.css
body {
  background:white;
  font-family: arial;
  margin: 0;
}

header{
  background:white;
  padding: 10px 5px 3px 10px;
  margin: 0px;
  border-radius: 3px
}

nav h1{
  display: inline;
}

nav ul{
  display: inline;
}

nav ul li{
  color: #444;
  display: inline-block;
  list-style-type: none;
  padding: 0px 10px
}

nav ul li a{
  color: #444
}

.row:after {
  content: "";
  display: table;
  clear: both;
}

.column1{
  width: 24%;
  float: left;
  padding: 10px 5px 15px 5px
}

.column2{
  width: 24%;
  float: left;
  padding: 10px 5px 15px 5px
}

.column1 img {
  border-radius: 8px;
  padding: 0px 40px 0px 0px
}

.column2 p {
  padding: 15px 0px 0px 0px
}

footer {
  float: left;
  
}

